--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -14,7 +14,8 @@
 
 }
 .movie-card-container{
-    height: 550px;
+    height: 90vh;
+    width: 100vw;
     background-color: black;
 }
 .movie-card{
@@ -26,7 +27,7 @@
 }
 .movie-detail{
     position: absolute;
-    top:200px;
+    top:550px;
     display: flex;
     justify-content: space-evenly;
     width:100%;
